@@ -4,7 +4,7 @@ Gem::Specification.new do |spec|
 
   spec.name                      =  'array-unique-compositing'
   spec.rubyforge_project         =  'array-unique-compositing'
-  spec.version                   =  '1.0.0'
+  spec.version                   =  '1.0.1'
 
   spec.summary                   =  "Provides Array::Unique::Compositing."
   spec.description               =  "An implementation of Array that permits chaining, where children inherit changes to parent and where parent settings can be overridden in children, and that retains sorted order, ensuring inserted values are unique."
@@ -12,6 +12,8 @@ Gem::Specification.new do |spec|
   spec.authors                   =  [ 'Asher' ]
   spec.email                     =  'asher@ridiculouspower.com'
   spec.homepage                  =  'http://rubygems.org/gems/array-unique-compositing'
+
+  spec.required_ruby_version     = ">= 1.9.1"
 
   spec.add_dependency            'array-compositing'
   spec.add_dependency            'array-unique'
